[gd_scene load_steps=31 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://sound/yay-6120.mp3" type="AudioStream" id=2]
[ext_resource path="res://sound/three-two-one-fight-deep-voice-38382.mp3" type="AudioStream" id=3]
[ext_resource path="res://sound/applause.mp3" type="AudioStream" id=4]
[ext_resource path="res://sound/end-countdown.mp3" type="AudioStream" id=5]
[ext_resource path="res://art/Playing_field/one.png" type="Texture" id=6]
[ext_resource path="res://art/Playing_field/three.png" type="Texture" id=8]
[ext_resource path="res://art/Playing_field/trophy.png" type="Texture" id=9]
[ext_resource path="res://art/Playing_field/goal_left.png" type="Texture" id=10]
[ext_resource path="res://art/Playing_field/flags.png" type="Texture" id=11]
[ext_resource path="res://scenes/fade_scene.tscn" type="PackedScene" id=12]
[ext_resource path="res://art/Playing_field/zero.png" type="Texture" id=13]
[ext_resource path="res://art/Playing_field/two.png" type="Texture" id=14]
[ext_resource path="res://art/Playing_field/goal_right.png" type="Texture" id=15]
[ext_resource path="res://art/Playing_field/FOOTBALL_FIELD.jpg" type="Texture" id=16]
[ext_resource path="res://art/Fonts/DiloWorld-mLJLv.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://sound/whistle.mp3" type="AudioStream" id=18]

[sub_resource type="DynamicFont" id=5]
size = 200
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=6]
size = 200
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 17 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 192.125, 22 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 424.75, 193 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 470.25, 164.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1108, 552 )

[sub_resource type="CircleShape2D" id=7]
radius = 48.0

[sub_resource type="DynamicFont" id=8]
size = 200
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=9]
size = 39
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 17 )

[sub_resource type="StreamTexture" id=12]
flags = 4

[sub_resource type="StreamTexture" id=13]
flags = 4

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=11]
size = 30
font_data = ExtResource( 17 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="FootballField" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 0.319947, 0.27 )
texture = ExtResource( 16 )

[node name="Right_goal" type="Sprite" parent="."]
position = Vector2( 1944, 514 )
scale = Vector2( 0.188649, 0.153676 )
z_index = 6
texture = ExtResource( 10 )
flip_h = true

[node name="Left_goal" type="Sprite" parent="."]
position = Vector2( -25, 516 )
scale = Vector2( 0.188649, 0.153676 )
z_index = 6
texture = ExtResource( 15 )

[node name="score_rightTeam" type="Label" parent="."]
margin_left = 704.0
margin_top = 432.0
margin_right = 958.0
margin_bottom = 643.0
custom_colors/font_color = Color( 0.611765, 0.768627, 0.882353, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1

[node name="score_leftTeam" type="Label" parent="."]
margin_left = 968.0
margin_top = 432.0
margin_right = 1222.0
margin_bottom = 643.0
custom_colors/font_color = Color( 0.901961, 0.54902, 0.666667, 1 )
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1

[node name="One" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 536 )
scale = Vector2( 0.695599, 0.692003 )
z_index = 2
texture = ExtResource( 6 )

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionShape2D15" type="CollisionShape2D" parent="Walls"]
position = Vector2( 2062, 373 )
shape = SubResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2( -423.75, 174 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2( -423, 1173 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls"]
position = Vector2( -645, 531 )
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls"]
position = Vector2( 956, -547 )
shape = SubResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Walls"]
position = Vector2( 952, 1628 )
shape = SubResource( 2 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Walls"]
position = Vector2( 2344, 194 )
shape = SubResource( 3 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Walls"]
position = Vector2( -419, 874 )
shape = SubResource( 3 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Walls"]
position = Vector2( 2335, 891 )
shape = SubResource( 3 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Walls"]
position = Vector2( 2565, 534 )
shape = SubResource( 4 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Walls"]
position = Vector2( 0, -14 )
shape = SubResource( 7 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Walls"]
position = Vector2( 0, 1080 )
shape = SubResource( 7 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Walls"]
position = Vector2( 1920, 1072 )
shape = SubResource( 7 )

[node name="2" type="CollisionShape2D" parent="Walls"]
position = Vector2( -138, 362 )
shape = SubResource( 14 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Walls"]
position = Vector2( 1920, 0 )
shape = SubResource( 7 )

[node name="1" type="CollisionShape2D" parent="Walls"]
position = Vector2( -142, 692 )
shape = SubResource( 14 )

[node name="3" type="CollisionShape2D" parent="Walls"]
position = Vector2( 2179, 153 )
shape = SubResource( 14 )

[node name="4" type="CollisionShape2D" parent="Walls"]
position = Vector2( 2056, 690 )
shape = SubResource( 14 )

[node name="Two" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 544 )
scale = Vector2( 0.695312, 0.695312 )
z_index = 2
texture = ExtResource( 14 )

[node name="Zero" type="Sprite" parent="."]
visible = false
position = Vector2( 952, 544 )
scale = Vector2( 0.695312, 0.695312 )
z_index = 2
texture = ExtResource( 13 )

[node name="Three" type="Sprite" parent="."]
visible = false
position = Vector2( 952, 544 )
scale = Vector2( 0.695312, 0.695312 )
z_index = 2
texture = ExtResource( 8 )

[node name="Countdown" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Trophy" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 736 )
scale = Vector2( 1.00391, 1.00391 )
z_index = 6
texture = ExtResource( 9 )

[node name="TeamWonNode" type="Node2D" parent="."]
z_index = 6

[node name="Flags" type="Sprite" parent="TeamWonNode"]
visible = false
position = Vector2( 944, 200 )
scale = Vector2( 0.626667, 0.626667 )
texture = ExtResource( 11 )

[node name="TeamWon" type="Label" parent="TeamWonNode"]
visible = false
margin_top = 128.0
margin_right = 1912.0
margin_bottom = 368.0
custom_colors/font_color = Color( 0.494118, 0.168627, 0.929412, 1 )
custom_fonts/font = SubResource( 8 )
text = "Draw"
align = 1
valign = 1

[node name="RedButton" type="Label" parent="TeamWonNode"]
visible = false
margin_top = 280.0
margin_right = 1920.0
margin_bottom = 544.0
custom_fonts/font = SubResource( 9 )
text = "Press the red button to continue"
align = 1
valign = 1

[node name="PawLeft" type="Sprite" parent="TeamWonNode"]
visible = false
position = Vector2( 752, 608 )
rotation = 1.5708
scale = Vector2( 0.706694, 0.706694 )
texture = SubResource( 12 )

[node name="PawRight" type="Sprite" parent="TeamWonNode"]
visible = false
position = Vector2( 1128, 608 )
rotation = -1.5708
scale = Vector2( 0.5625, 0.5625 )
texture = SubResource( 13 )

[node name="timer_board1" type="Label" parent="."]
margin_left = 830.0
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.498039, 0.0980392, 0.0980392, 1 )
custom_fonts/font = SubResource( 10 )
align = 1

[node name="timer_board2" type="Label" parent="."]
margin_left = 1100.0
margin_top = 1080.0
margin_right = 1100.0
margin_bottom = 1112.0
rect_rotation = 180.0
custom_colors/font_color = Color( 0.498039, 0.0980392, 0.0980392, 1 )
custom_fonts/font = SubResource( 11 )
align = 1

[node name="Applause" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="End_Countdown" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="TransitionScreen" parent="." instance=ExtResource( 12 )]
visible = false

[node name="Play_off" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="GoalYay" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="child_entered_tree" from="." to="." method="_on_Main_child_entered_tree"]
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
